--- a/dspbench-flink/src/main/resources/config/clickanalytics.properties
+++ b/dspbench-flink/src/main/resources/config/clickanalytics.properties
@@ -1,27 +1,28 @@
-ca.source.threads=1
-ca.source.class=flink.source.FileSource
+ca.source.class=flink.source.KafkasSource
 ca.source.path=/home/DSPBench/dspbench-flink/data/click-stream.json
-ca.source.parser=org.dspbench.applications.clickanalytics.ClickStreamParser
 
-ca.parser.threads=1
+ca.kafka.zookeeper.host=10.32.45.44:9092
+ca.kafka.source.topic=click
 
-ca.visit.sink.threads=1
 ca.visit.sink.class=flink.sink.ConsoleSink
 
-ca.location.sink.threads=1
 ca.location.sink.class=flink.sink.ConsoleSink
 
-ca.repeats.threads=1
-ca.geography.threads=1
-ca.total_stats.threads=1
-ca.geo_stats.threads=1
-
 storm.geoip.instance=geoip2
-storm.geoip2.db=/home/DSPBench/dspbench-flink/data/GeoLite2-City.mmdb
+storm.geoip2.db=/home/gmap/DSPBench/dspbench-flink/data/GeoLite2-City.mmdb
 
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/metrics/clickanalytics
+ca.source.threads=1
+
+ca.parser.threads=6
+ca.repeats.threads=12
+ca.total_stats.threads=12
+ca.geography.threads=12
+ca.geo_stats.threads=12
+ca.visit.sink.threads=8
+ca.location.sink.threads=8
+metrics.output=/home/gmap/metrics/stream/CA6121212128/5/
