--- a/dspbench-flink/src/main/resources/config/spikedetection.properties
+++ b/dspbench-flink/src/main/resources/config/spikedetection.properties
@@ -1,15 +1,15 @@
-sd.source.threads=1
-sd.source.class=flink.source.FileSource
+sd.source.class=flink.source.KafkasSource
 sd.source.path=/home/gmap/DSPBench/dspbench-flink/data/sensors.dat
 
-sd.sink.threads=1
-sd.sink.class=flink.sink.ConsoleSink
+sd.kafka.zookeeper.host=10.32.45.44:9092
+sd.kafka.source.topic=spike
 
 sd.parser.value_field=temp
-sd.moving_average.threads=1
+
 sd.moving_average.window=1000
-sd.spike_detector.threads=1
 sd.spike_detector.threshold=0.03
+
+sd.sink.class=flink.sink.ConsoleSink
 
 sd.runtime_sec=60
 
@@ -18,4 +18,10 @@ metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/metrics/spikeDetection
+sd.source.threads=1
+
+sd.parser.threads=6
+sd.moving_average.threads=12
+sd.spike_detector.threads=12
+sd.sink.threads=8
+metrics.output=/home/gmap/metrics/stream/SD612128/5/
