--- a/dspbench-flink/src/main/resources/config/logprocessing.properties
+++ b/dspbench-flink/src/main/resources/config/logprocessing.properties
@@ -1,30 +1,33 @@
-lp.source.threads=1
-lp.source.class=flink.source.FileSource
+lp.source.class=flink.source.KafkasSource
 lp.source.path=/home/DSPBench/dspbench-flink/data/http-server.log
 
-lp.parser.threads=1
+lp.kafka.zookeeper.host=10.32.45.44:9092
+lp.kafka.source.topic=log
 
-lp.count.sink.threads=1
 lp.count.sink.class=flink.sink.ConsoleSink
 
-lp.status.sink.threads=1
 lp.status.sink.class=flink.sink.ConsoleSink
 
-lp.country.sink.threads=1
 lp.country.sink.class=flink.sink.ConsoleSink
 
 lp.volume_counter.window=60
-lp.volume_counter.threads=1
-lp.status_counter.threads=1
-lp.geo_finder.threads=1
-lp.geo_stats.threads=1
 
 storm.geoip.instance=geoip2
-storm.geoip2.db=/home/DSPBench/dspbench-flink/data/GeoLite2-City.mmdb
+storm.geoip2.db=/home/gmap/DSPBench/dspbench-flink/data/GeoLite2-City.mmdb
 
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.unit=seconds
 metrics.interval.value=1
 
-metrics.output=/home/metrics/logProcesing
+lp.source.threads=1
+
+lp.parser.threads=6
+lp.volume_counter.threads=12
+lp.status_counter.threads=12
+lp.geo_finder.threads=6
+lp.geo_stats.threads=12
+lp.count.sink.threads=4
+lp.status.sink.threads=4
+lp.country.sink.threads=4
+metrics.output=/home/gmap/metrics/stream/LP612126124/5/
