--- a/dspbench-flink/src/main/resources/config/sentimentanalysis.properties
+++ b/dspbench-flink/src/main/resources/config/sentimentanalysis.properties
@@ -1,13 +1,11 @@
-sa.source.threads=1
-sa.source.class=flink.source.FileSource
+sa.source.class=flink.source.KafkasSource
 sa.source.path=/home/DSPBench/dspbench-flink/data/tweetstream.jsonl
 
-sa.parser.threads=1
+sa.kafka.zookeeper.host=10.32.45.44:9092
+sa.kafka.source.topic=sentiment
 
-sa.classifier.threads=1
 sa.classifier.type=basic
 
-sa.sink.threads=1
 sa.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
@@ -15,4 +13,9 @@ metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/metrics/sentimentAnalysis
+sa.source.threads=1
+
+sa.parser.threads=6
+sa.classifier.threads=12
+sa.sink.threads=8
+metrics.output=/home/gmap/metrics/stream/SA6128/5/
