--- a/dspbench-flink/src/main/resources/config/wordcount.properties
+++ b/dspbench-flink/src/main/resources/config/wordcount.properties
@@ -1,16 +1,9 @@
-wc.source.threads=1
-wc.source.class=flink.source.FileSource
+wc.source.class=flink.source.KafkasSource
 wc.source.path=/home/gmap/DSPBench/dspbench-flink/data/books.dat
 
-wc.parser.threads=1
-
-wc.kafka.zookeeper.host=kafka:9092
+wc.kafka.zookeeper.host=10.32.45.44:9092
 wc.kafka.source.topic=books
 
-wc.splitter.threads=1
-wc.counter.threads=1
-
-wc.sink.threads=1
 wc.sink.class=flink.sink.ConsoleSink
 
 wc.runtime_sec=60
@@ -20,4 +13,10 @@ metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/gmap/metrics/wordcount
+wc.source.threads=1
+
+wc.parser.threads=5
+wc.splitter.threads=10
+wc.counter.threads=12
+wc.sink.threads=6
+metrics.output=/home/gmap/metrics/stream/WC510126/5/
