--- a/dspbench-flink/src/main/resources/config/frauddetection.properties
+++ b/dspbench-flink/src/main/resources/config/frauddetection.properties
@@ -1,11 +1,10 @@
-fd.source.threads=1
-fd.source.class=flink.source.FileSource
-fd.source.path=/home/DSPBench/dspbench-flink/data/credit-card.dat
+fd.source.class=flink.source.KafkasSource
+fd.source.path=/home/gmap/DSPBench/dspbench-flink/data/credit-card.dat
 fd.source.parser=flink.parsers.TransactionParser
 
-fd.parser.threads=1
+fd.kafka.zookeeper.host=10.32.45.44:9092
+fd.kafka.source.topic=fraud
 
-fd.predictor.threads=1
 fd.predictor.model=mm
 fd.local.predictor=true
 fd.state.seq.window.size=5
@@ -13,7 +12,6 @@ fd.state.ordinal=1
 fd.detection.algorithm=missProbability
 fd.metric.threshold=0.96
 
-fd.sink.threads=1
 fd.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
@@ -21,4 +19,9 @@ metrics.interval.value=1
 metrics.reporter=csv
 metrics.interval.unit=seconds
 
-metrics.output=/home/metrics/frauddetection
+fd.source.threads=1
+
+fd.parser.threads=6
+fd.predictor.threads=6
+fd.sink.threads=12
+metrics.output=/home/gmap/metrics/batch/FD6612/5/
