--- a/dspbench-flink/src/main/resources/config/machineoutlier.properties
+++ b/dspbench-flink/src/main/resources/config/machineoutlier.properties
@@ -1,21 +1,25 @@
-mo.source.threads=1
-mo.source.class=flink.source.FileSource
-mo.source.path=/home/DSPBench/dspbench-flink/data/machine-usage.csv
+mo.source.class=flink.source.KafkasSource
+mo.source.path=/home/gmap/DSPBench/dspbench-flink/data/machine-usage.csv
 
-mo.parser.threads=1
+mo.kafka.zookeeper.host=10.32.45.44:9092
+mo.kafka.source.topic=machines
 
-mo.scorer.threads=1
 mo.scorer.data_type=machineMetadata
-mo.anomaly_scorer.threads=1
-mo.anomaly_scorer.window_length=10
-mo.alert_trigger.threads=1
 
-mo.sink.threads=1
+mo.anomaly_scorer.window_length=5
+
 mo.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
 metrics.interval.value=1
 metrics.reporter=csv
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
-metrics.output=/home/metrics/machineoutlier
+mo.source.threads=1
+
+mo.parser.threads=1
+mo.scorer.threads=1
+mo.anomaly_scorer.threads=1
+mo.alert_trigger.threads=1
+mo.sink.threads=3
+metrics.output=/home/gmap/metrics/batch/MO11113/5/
