--- a/dspbench-flink/src/main/resources/config/reinforcementlearner.properties
+++ b/dspbench-flink/src/main/resources/config/reinforcementlearner.properties
@@ -1,21 +1,20 @@
-rl.event.source.class=flink.source.FileSource
+rl.event.source.class=flink.source.KafkasSource
 rl.event.source.path=/home/gmap/DSPBench/dspbench-flink/data/reinforcement-events.csv
 rl.event.source.threads=1
-rl.event.parser.threads=1
 
-rl.reward.source.class=flink.source.FileSource
+rl.event.kafka.zookeeper.host=10.32.45.44:9092
+rl.event.kafka.source.topic=event
+
+rl.reward.source.class=flink.source.KafkasSource
 rl.reward.source.path=/home/gmap/DSPBench/dspbench-flink/data/reinforcement-rewards.csv
 rl.reward.source.threads=1
-rl.reward.parser.threads=1
 
-rl.kafka.zookeeper.host=10.32.45.44:9092
-rl.event.kafka.source.topic=events
+rl.reward.kafka.zookeeper.host=10.32.45.44:9092
 rl.reward.kafka.source.topic=reward
 
-rl.learner.threads=1
+rl.generator.max_rounds=10000
 rl.learner.type=intervalEstimator
 rl.learner.actions=page1,page2,page3
-rl.learner.action.writer=redis
 
 rl.bin.width=1
 rl.confidence.limit=95
@@ -25,7 +24,6 @@ rl.confidence.limit.reduction.round.interval=50
 rl.min.reward.distr.sample=30
 
 rl.sink.class=flink.sink.ConsoleSink
-rl.sink.threads=1
 
 debug.on=true
 
@@ -33,4 +31,9 @@ metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
-metrics.output=/home/gmap/metrics/stream/WC510126/5/
+
+rl.event.parser.threads=6
+rl.reward.parser.threads=6
+rl.learner.threads=12
+rl.sink.threads=8
+metrics.output=/home/gmap/metrics/batch/RL66128/5/
