--- a/dspbench-flink/src/main/resources/config/smartgrid.properties
+++ b/dspbench-flink/src/main/resources/config/smartgrid.properties
@@ -1,23 +1,13 @@
 sg.slice.length=60
 
-sg.source.threads=1
-sg.source.class=flink.source.FileSource
-sg.source.path=/home/DSPBench/dspbench-flink/data/smart-grid.csv
+sg.source.class=flink.source.KafkasSource
+sg.source.path=/home/gmap/DSPBench/dspbench-flink/data/smart-grid.csv
 
-sg.parser.threads=1
+sg.kafka.zookeeper.host=10.32.45.44:9092
+sg.kafka.source.topic=grids
 
-sg.outlier.sink.threads=1
 sg.outlier.sink.class=flink.sink.ConsoleSink
-
-sg.prediction.sink.threads=1
 sg.prediction.sink.class=flink.sink.ConsoleSink
-        
-sg.sliding_window.threads=1
-sg.global_median.threads=1
-sg.plug_median.threads=1
-sg.house_load.threads=1
-sg.plug_load.threads=1
-sg.outlier_detector.threads=1
 
 sg.house_load.frequency=3
 sg.plug_load.frequency=3
@@ -27,4 +17,15 @@ metrics.reporter=csv
 metrics.enabled=true
 metrics.interval.unit=seconds
 
-metrics.output=/home/metrics/smartgrid
+sg.source.threads=1
+
+sg.parser.threads=1
+sg.sliding_window.threads=1
+sg.global_median.threads=1
+sg.plug_median.threads=1
+sg.outlier_detector.threads=1
+sg.house_load.threads=1
+sg.plug_load.threads=1
+sg.outlier.sink.threads=3
+sg.prediction.sink.threads=3
+metrics.output=/home/gmap/metrics/batch/SG111111133/5/
