--- a/dspbench-flink/src/main/resources/config/spamfilter.properties
+++ b/dspbench-flink/src/main/resources/config/spamfilter.properties
@@ -1,27 +1,28 @@
 sf.training.source.class=flink.source.FileSource
 sf.training.source.path=/dev/null
 sf.training.source.threads=1
-sf.training.parser.threads=1
 
-sf.analysis.source.class=flink.source.FileSource
-sf.analysis.source.path=/home/gmap/DSPBench/dspbench-flink/data/enron.json
+sf.analysis.source.class=flink.source.KafkasSource
+sf.analysis.source.path=/home/gmap/DSPBench/dspbench-flink/data/enron2.json
 sf.analysis.source.threads=1
-sf.analysis.parser.threads=1
 
-sf.tokenizer.threads=1
+sf.analysis.kafka.zookeeper.host=10.32.45.44:9092
+sf.analysis.kafka.source.topic=email
+
 sf.wordprob.wordmap=/home/gmap/DSPBench/dspbench-flink/src/main/resources/spamfilter/wordmap.json
-sf.bayesrule.threads=1
 sf.bayesrule.spam_probability=0.9
 sf.wordprob.wordmap.use_default=true
 
-sf.sink.threads=1
 sf.sink.class=flink.sink.ConsoleSink
-
-sf.kafka.zookeeper.host=10.32.45.44:9092
-sf.kafka.source.topic=spam
 
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
-metrics.output=/home/gmap/metrics/stream/SF/1/
+
+sf.training.parser.threads=1
+sf.analysis.parser.threads=1
+sf.tokenizer.threads=1
+sf.bayesrule.threads=2
+sf.sink.threads=1
+metrics.output=/home/gmap/metrics/batch/SF11121/5/
