--- a/dspbench-flink/src/main/resources/config/trafficmonitoring.properties
+++ b/dspbench-flink/src/main/resources/config/trafficmonitoring.properties
@@ -1,21 +1,18 @@
-tm.source.threads=1
-tm.source.class=flink.source.FileSource
-tm.source.path=/home/DSPBench/dspbench-flink/data/taxi-traces.csv
+tm.source.class=flink.source.KafkasSource
+tm.source.path=/home/gmap/DSPBench/dspbench-flink/data/taxi-traces.csv
 tm.source.parser=flink.parser.BeijingTaxiTraceParser
 
-tm.parser.threads=1
+tm.kafka.zookeeper.host=10.32.45.44:9092
+tm.kafka.source.topic=traffic
 
 tm.road.feature.id_key=osm_id
-tm.map_matcher.shapefile=/home/DSPBench/dspbench-flink/data/beijing/roads.shp
-tm.map_matcher.threads=1
+tm.map_matcher.shapefile=/home/gmap/DSPBench/dspbench-flink/data/beijing/roads.shp
 
 tm.map_matcher.lat.min=39.689602
 tm.map_matcher.lat.max=40.122410
 tm.map_matcher.lon.min=116.105789
 tm.map_matcher.lon.max=116.670021
-tm.speed_calculator.threads=1
 
-tm.sink.threads=1
 tm.sink.class=flink.sink.ConsoleSink
 
 metrics.interval.value=1
@@ -23,4 +20,10 @@ metrics.reporter=csv
 metrics.enabled=true
 metrics.interval.unit=seconds
 
-metrics.output=/home/metrics/trafficmonitoring
+tm.source.threads=1
+
+tm.parser.threads=6
+tm.map_matcher.threads=6
+tm.speed_calculator.threads=12
+tm.sink.threads=6
+metrics.output=/home/gmap/metrics/batch/TM66126/5/
