--- a/dspbench-flink/src/main/resources/config/voipstream.properties
+++ b/dspbench-flink/src/main/resources/config/voipstream.properties
@@ -1,18 +1,11 @@
-#vs.source.class=flink.source.GeneratorSource
-#vs.source.generator=flink.generator.CDRGenerator
-#vs.source.threads=1
+vs.source.threads=1
+vs.source.class=flink.source.KafkasSource
+vs.source.path=/home/gmap/DSPBench/dspbench-flink/data/VoIP.txt
 
-vs.vardetect.threads=1
-vs.ecr.threads=1
-vs.rcr.threads=1
-vs.encr.threads=1
-vs.ecr24.threads=1
-vs.ct24.threads=1
-vs.fofir.threads=1
-vs.url.threads=1
-vs.globalacd.threads=1
-vs.acd.threads=1
-vs.scorer.threads=1
+vs.kafka.zookeeper.host=10.32.45.44:9092
+vs.kafka.source.topic=voip
+
+vs.generator.population=10000
 
 vs.variation.aprox_size=180000
 vs.variation.error_rate=0.01
@@ -56,13 +49,23 @@ vs.acd.decay_factor=86400.0
 vs.acd.weight=3.0
 
 vs.sink.class=flink.sink.ConsoleSink
-vs.sink.threads=1
-
-vs.kafka.zookeeper.host=10.32.45.44:9092
-vs.kafka.source.topic=books
 
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
-metrics.output=/home/gmap/metrics/stream/VS/5/
+
+vs.parser.threads=4
+vs.vardetect.threads=8
+vs.encr.threads=8
+vs.ecr.threads=8
+vs.rcr.threads=8
+vs.ecr24.threads=8
+vs.ct24.threads=8
+vs.globalacd.threads=8
+vs.fofir.threads=4
+vs.url.threads=4
+vs.acd.threads=4
+vs.scorer.threads=2
+vs.sink.threads=2
+metrics.output=/home/gmap/metrics/batch/VS4888888844422/5/
