--- a/dspbench-flink/src/main/resources/config/adanalytics.properties
+++ b/dspbench-flink/src/main/resources/config/adanalytics.properties
@@ -1,25 +1,28 @@
-aa.kafka.zookeeper.host=10.32.45.44:9092
-aa.kafka.source.topic=ads
-
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
-metrics.output=/home/gmap/metrics/stream/AA/1/
 
 aa.click.source.threads=1
-aa.click.parser.threads=1
-aa.click.source.class=flink.source.FileSource
+aa.click.source.class=flink.source.KafkasSource
 aa.click.source.path=/home/gmap/DSPBench/dspbench-flink/data/ad-clicks.dat
 
+aa.click.kafka.zookeeper.host=10.32.45.44:9092
+aa.click.kafka.source.topic=ads
+
 aa.impressions.source.threads=1
-aa.impressions.parser.threads=1
-aa.impressions.source.class=flink.source.FileSource
+aa.impressions.source.class=flink.source.KafkasSource
 aa.impressions.source.path=/home/gmap/DSPBench/dspbench-flink/data/ad-clicks.dat
 
-aa.ctr.threads=1
+aa.impressions.kafka.zookeeper.host=10.32.45.44:9092
+aa.impressions.kafka.source.topic=ads
+
 aa.ctr.window_length=10
 aa.ctr.emit_frequency=2
-
-aa.sink.threads=1
 aa.sink.class=flink.sink.ConsoleSink
+
+aa.click.parser.threads=6
+aa.impressions.parser.threads=6
+aa.ctr.threads=12
+aa.sink.threads=8
+metrics.output=/home/gmap/metrics/batch/AA66128/5/
