--- a/dspbench-flink/src/main/resources/config/bargainindex.properties
+++ b/dspbench-flink/src/main/resources/config/bargainindex.properties
@@ -1,26 +1,29 @@
-bi.kafka.zookeeper.host=10.32.45.44:9092
-bi.kafka.source.topic=stocks
-
 metrics.enabled=true
 metrics.reporter=csv
 metrics.interval.value=1
 metrics.interval.unit=seconds
 
 bi.quotes.source.threads=1
-bi.quotes.source.class=flink.source.FileSource
+bi.quotes.source.class=flink.source.KafkasSource
 bi.quotes.source.path=/home/gmap/DSPBench/dspbench-flink/data/stocks.csv
 
+bi.quotes.kafka.zookeeper.host=10.32.45.44:9092
+bi.quotes.kafka.source.topic=stocks
+
 bi.trades.source.threads=1
-bi.trades.source.class=flink.source.FileSource
+bi.trades.source.class=flink.source.KafkasSource
 bi.trades.source.path=/home/gmap/DSPBench/dspbench-flink/data/stocks.csv
+
+bi.trades.kafka.zookeeper.host=10.32.45.44:9092
+bi.trades.kafka.source.topic=stocks
 
 bi.vwap.period=daily
 bi.bargainindex.threshold=0.001
 bi.sink.class=flink.sink.ConsoleSink
 
-bi.quotes.parser.threads=1
-bi.trades.parser.threads=1
-bi.vwap.threads=1
-bi.bargainindex.threads=1
-bi.sink.threads=1
-metrics.output=/home/gmap/metrics/stream/BI11111/1/
+bi.quotes.parser.threads=4
+bi.trades.parser.threads=4
+bi.vwap.threads=12
+bi.bargainindex.threads=8
+bi.sink.threads=6
+metrics.output=/home/gmap/metrics/batch/BI441286/5/
