--- a/dspbench-storm/src/main/resources/config/clickanalytics.properties
+++ b/dspbench-storm/src/main/resources/config/clickanalytics.properties
@@ -1,6 +1,6 @@
 ca.spout.threads=1
 ca.spout.class=org.dspbench.spout.FileSpout
-ca.spout.path=data/click-stream.json
+ca.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/click-stream.json
 ca.spout.parser=org.dspbench.applications.clickanalytics.ClickStreamParser
 
 ca.visit.sink.threads=1
@@ -16,11 +16,11 @@ ca.total_stats.threads=1
 ca.geo_stats.threads=1
 
 storm.geoip.instance=geoip2
-storm.geoip2.db=data/GeoLite2-City.mmdb
+storm.geoip2.db=/home/gabriel/Videos/DSPBench/dspbench-storm/data/GeoLite2-City.mmdb
 
 metrics.enabled=true
+metrics.onlySink=false
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/luan/Documents/clickanalytics
+metrics.output=/home/gabriel/Videos/CA
