--- a/dspbench-storm/src/main/resources/config/frauddetection.properties
+++ b/dspbench-storm/src/main/resources/config/frauddetection.properties
@@ -1,6 +1,6 @@
 fd.spout.threads=1
 fd.spout.class=org.dspbench.spout.FileSpout
-fd.spout.path=data/credit-card.dat
+fd.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/credit-card.dat
 fd.spout.parser=org.dspbench.applications.frauddetection.TransactionParser
 
 fd.predictor.threads=1
@@ -15,7 +15,8 @@ fd.sink.threads=1
 fd.sink.class=org.dspbench.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.onlySink=false
 metrics.reporter=csv
 metrics.interval.unit=seconds
 
-metrics.output=/home/luan/Documents/frauddetection
+metrics.output=/home/gabriel/Videos/FD
