--- a/dspbench-storm/src/main/resources/config/logprocessing.properties
+++ b/dspbench-storm/src/main/resources/config/logprocessing.properties
@@ -1,6 +1,6 @@
 lp.spout.threads=1
 lp.spout.class=org.dspbench.spout.FileSpout
-lp.spout.path=data/http-server.log
+lp.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/http-server.log
 lp.spout.parser=org.dspbench.applications.logprocessing.CommonLogParser
 
 lp.count.sink.threads=1
@@ -19,11 +19,11 @@ lp.geo_finder.threads=1
 lp.geo_stats.threads=1
 
 storm.geoip.instance=geoip2
-storm.geoip2.db=data/GeoLite2-City.mmdb
+storm.geoip2.db=/home/gabriel/Videos/DSPBench/dspbench-storm/data/GeoLite2-City.mmdb
 
 metrics.enabled=true
+metrics.onlySink=false
 metrics.reporter=csv
 metrics.interval.unit=seconds
-metrics.interval.value=1
 
-metrics.output=/home/gabriel/Documents/logprocesing
+metrics.output=/home/gabriel/Videos/LP
