--- a/dspbench-storm/src/main/resources/config/machineoutlier.properties
+++ b/dspbench-storm/src/main/resources/config/machineoutlier.properties
@@ -1,6 +1,6 @@
 mo.spout.threads=1
 mo.spout.class=org.dspbench.spout.FileSpout
-mo.spout.path=data/machine-usage.csv
+mo.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/machine-usage.csv
 mo.spout.parser=org.dspbench.applications.machineoutlier.AlibabaMachineUsageParser
         
 mo.scorer.threads=1
@@ -13,7 +13,8 @@ mo.sink.threads=1
 mo.sink.class=org.dspbench.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.onlySink=false
 metrics.reporter=csv
-metrics.interval.unit=sdsdseconds
+metrics.interval.unit=seconds
 
-metrics.output=/home/luan/Documents/machineoutlier
+metrics.output=/home/gabriel/Videos/MO
