--- a/dspbench-storm/src/main/resources/config/sentimentanalysis.properties
+++ b/dspbench-storm/src/main/resources/config/sentimentanalysis.properties
@@ -1,6 +1,6 @@
 sa.spout.threads=1
 sa.spout.class=org.dspbench.spout.FileSpout
-sa.spout.path=data/tweetstream.jsonl
+sa.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/tweetstream.jsonl
 sa.spout.parser=org.dspbench.spout.parser.JsonTweetParser
 
 sa.classifier.threads=1
@@ -10,7 +10,8 @@ sa.sink.threads=1
 sa.sink.class=org.dspbench.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.onlySink=false
 metrics.reporter=csv
-metrics.interval.unit=milliseconds
+metrics.interval.unit=seconds
 
-metrics.output=/home/luan/Documents/sentimentAnalysis
+metrics.output=/home/gabriel/Videos/SA
