--- a/dspbench-storm/src/main/resources/config/trafficmonitoring.properties
+++ b/dspbench-storm/src/main/resources/config/trafficmonitoring.properties
@@ -1,10 +1,10 @@
 tm.spout.threads=1
 tm.spout.class=org.dspbench.spout.FileSpout
-tm.spout.path=data/taxi-traces.csv
+tm.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/taxi-traces.csv
 tm.spout.parser=org.dspbench.applications.trafficmonitoring.BeijingTaxiTraceParser
 
 tm.road.feature.id_key=osm_id
-tm.map_matcher.shapefile=data/beijing/roads.shp
+tm.map_matcher.shapefile=/home/gabriel/Videos/DSPBench/dspbench-storm/data/beijing/roads.shp
 tm.map_matcher.threads=1
 
 tm.map_matcher.lat.min=39.689602
@@ -17,6 +17,8 @@ tm.sink.threads=1
 tm.sink.class=org.dspbench.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.onlySink=false
+metrics.reporter=csv
 metrics.interval.unit=seconds
 
-metrics.output=/home/luan/Documents/trafficmonitoring
+metrics.output=/home/gabriel/Videos/TM
