--- a/dspbench-storm/src/main/resources/config/voipstream.properties
+++ b/dspbench-storm/src/main/resources/config/voipstream.properties
@@ -1,5 +1,6 @@
-vs.spout.class=org.dspbench.spout.GeneratorSpout
-vs.spout.generator=org.dspbench.spout.generator.CDRGenerator
+vs.spout.class=org.dspbench.spout.FileSpout
+vs.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/VoIP.txt
+vs.spout.parser=org.dspbench.applications.voipstream.VoipParser
 
 vs.sink.class=org.dspbench.sink.ConsoleSink
 
@@ -57,3 +58,10 @@ vs.acd.threshold.min=5.0
 vs.acd.threshold.max=10.0
 vs.acd.decay_factor=86400.0
 vs.acd.weight=3.0
+
+metrics.enabled=true
+metrics.onlySink=false
+metrics.reporter=csv
+metrics.interval.unit=seconds
+
+metrics.output=/home/gabriel/Videos/VS
