--- a/dspbench-storm/src/main/resources/config/wordcount.properties
+++ b/dspbench-storm/src/main/resources/config/wordcount.properties
@@ -1,17 +1,17 @@
 wc.spout.threads=1
 wc.spout.class=org.dspbench.spout.FileSpout
-wc.spout.path=data/books.dat
+wc.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/books.dat
 wc.spout.parser=org.dspbench.applications.wordcount.StringParser
 
 wc.splitter.threads=1
-wc.counter.threads=5
+wc.counter.threads=1
 
 wc.sink.threads=1
 wc.sink.class=org.dspbench.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.onlySink=false
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
-metrics.output=/home/gabriel/Documents/wordcount
+metrics.output=/home/gabriel/Videos/WC
