--- a/dspbench-storm/src/main/resources/config/smartgrid.properties
+++ b/dspbench-storm/src/main/resources/config/smartgrid.properties
@@ -2,7 +2,7 @@ sg.slice.length=60
 
 sg.spout.threads=1
 sg.spout.class=org.dspbench.spout.FileSpout
-sg.spout.path=data/smart-grid.csv
+sg.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/smart-grid.csv
 sg.spout.parser=org.dspbench.applications.smartgrid.SmartPlugParser
 
 sg.outlier.sink.threads=1
@@ -22,6 +22,8 @@ sg.house_load.frequency=15
 sg.plug_load.frequency=15
 
 metrics.enabled=true
-metrics.interval.unit=milliseconds
+metrics.onlySink=false
+metrics.reporter=csv
+metrics.interval.unit=seconds
 
-metrics.output=/home/gabriel/Documents/smartgrid
+metrics.output=/home/gabriel/Videos/SG
