--- a/dspbench-storm/src/main/resources/config/spikedetection.properties
+++ b/dspbench-storm/src/main/resources/config/spikedetection.properties
@@ -1,6 +1,6 @@
 sd.spout.threads=1
 sd.spout.class=org.dspbench.spout.FileSpout
-sd.spout.path=data/sensors.dat
+sd.spout.path=/home/gabriel/Videos/DSPBench/dspbench-storm/data/sensors.dat
 sd.spout.parser=org.dspbench.applications.spikedetection.SensorParser
 
 sd.sink.threads=1
@@ -13,8 +13,8 @@ sd.spike_detector.threads=1
 sd.spike_detector.threshold=0.03
 
 metrics.enabled=true
+metrics.onlySink=false
 metrics.reporter=csv
 metrics.interval.unit=seconds
-metrics.interval.value=1
 
-metrics.output=/home/luan/Documents/spikeDetection
+metrics.output=/home/gabriel/Videos/SD
