--- a/dspbench-flink/src/main/resources/config/YSB.properties
+++ b/dspbench-flink/src/main/resources/config/YSB.properties
@@ -1,16 +1,15 @@
-ysb.source.threads=5
-ysb.filter.threads=5
-ysb.joiner.threads=4
-ysb.aggregator.threads=1
-ysb.sink.threads=1
-
 ysb.numKeys=100
 
 ysb.runtime_sec=60
 
 metrics.enabled=true
-metrics.reporter=csv
-metrics.interval.value=1
+metrics.onlySink=false
+metrics.enabled=true
 metrics.interval.unit=seconds
 
-metrics.output=/home/gmap/metrics/YSB55411/5
+ysb.source.threads=1
+ysb.filter.threads=1
+ysb.joiner.threads=1
+ysb.aggregator.threads=1
+ysb.sink.threads=1
+metrics.output=/home/gmap/metrics/stream/YSB11111/1/
