--- a/dspbench-flink/src/main/resources/config/adanalytics.properties
+++ b/dspbench-flink/src/main/resources/config/adanalytics.properties
@@ -1,6 +1,6 @@
 metrics.enabled=true
+metrics.onlySink=true
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
 aa.click.source.threads=1
@@ -25,4 +25,4 @@ aa.click.parser.threads=6
 aa.impressions.parser.threads=6
 aa.ctr.threads=12
 aa.sink.threads=8
-metrics.output=/home/gmap/metrics/batch/AA66128/5/
+metrics.output=/home/gmap/metrics/batch/AA66128/3/
