--- a/dspbench-flink/src/main/resources/config/bargainindex.properties
+++ b/dspbench-flink/src/main/resources/config/bargainindex.properties
@@ -1,6 +1,6 @@
 metrics.enabled=true
+metrics.onlySink=true
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
 bi.quotes.source.threads=1
@@ -23,7 +23,7 @@ bi.sink.class=flink.sink.ConsoleSink
 
 bi.quotes.parser.threads=4
 bi.trades.parser.threads=4
-bi.vwap.threads=12
-bi.bargainindex.threads=8
-bi.sink.threads=6
-metrics.output=/home/gmap/metrics/batch/BI441286/5/
+bi.vwap.threads=8
+bi.bargainindex.threads=4
+bi.sink.threads=4
+metrics.output=/home/gmap/metrics/batch/BI44844/3/
