--- a/dspbench-flink/src/main/resources/config/frauddetection.properties
+++ b/dspbench-flink/src/main/resources/config/frauddetection.properties
@@ -15,13 +15,13 @@ fd.metric.threshold=0.96
 fd.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
-metrics.interval.value=1
+metrics.onlySink=true
 metrics.reporter=csv
 metrics.interval.unit=seconds
 
 fd.source.threads=1
 
-fd.parser.threads=6
-fd.predictor.threads=6
-fd.sink.threads=12
-metrics.output=/home/gmap/metrics/batch/FD6612/5/
+fd.parser.threads=8
+fd.predictor.threads=8
+fd.sink.threads=8
+metrics.output=/home/gmap/metrics/batch/FD888/3/
