--- a/dspbench-flink/src/main/resources/config/logprocessing.properties
+++ b/dspbench-flink/src/main/resources/config/logprocessing.properties
@@ -16,9 +16,9 @@ storm.geoip.instance=geoip2
 storm.geoip2.db=/home/gmap/DSPBench/dspbench-flink/data/GeoLite2-City.mmdb
 
 metrics.enabled=true
+metrics.onlySink=true
 metrics.reporter=csv
 metrics.interval.unit=seconds
-metrics.interval.value=1
 
 lp.source.threads=1
 
@@ -30,4 +30,4 @@ lp.geo_stats.threads=12
 lp.count.sink.threads=4
 lp.status.sink.threads=4
 lp.country.sink.threads=4
-metrics.output=/home/gmap/metrics/stream/LP612126124/5/
+metrics.output=/home/gmap/metrics/batch/LP61212612444/3/
