--- a/dspbench-flink/src/main/resources/config/machineoutlier.properties
+++ b/dspbench-flink/src/main/resources/config/machineoutlier.properties
@@ -11,7 +11,7 @@ mo.anomaly_scorer.window_length=5
 mo.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
-metrics.interval.value=1
+metrics.onlySink=true
 metrics.reporter=csv
 metrics.interval.unit=seconds
 
@@ -22,4 +22,4 @@ mo.scorer.threads=1
 mo.anomaly_scorer.threads=1
 mo.alert_trigger.threads=1
 mo.sink.threads=3
-metrics.output=/home/gmap/metrics/batch/MO11113/5/
+metrics.output=/home/gmap/metrics/batch/MO11113/3/
