--- a/dspbench-flink/src/main/resources/config/reinforcementlearner.properties
+++ b/dspbench-flink/src/main/resources/config/reinforcementlearner.properties
@@ -28,12 +28,12 @@ rl.sink.class=flink.sink.ConsoleSink
 debug.on=true
 
 metrics.enabled=true
+metrics.onlySink=true
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
 rl.event.parser.threads=6
 rl.reward.parser.threads=6
 rl.learner.threads=12
 rl.sink.threads=8
-metrics.output=/home/gmap/metrics/batch/RL66128/5/
+metrics.output=/home/gmap/metrics/batch/RL66128/3/
