--- a/dspbench-flink/src/main/resources/config/smartgrid.properties
+++ b/dspbench-flink/src/main/resources/config/smartgrid.properties
@@ -12,9 +12,9 @@ sg.prediction.sink.class=flink.sink.ConsoleSink
 sg.house_load.frequency=3
 sg.plug_load.frequency=3
 
-metrics.interval.value=1
 metrics.reporter=csv
 metrics.enabled=true
+metrics.onlySink=true
 metrics.interval.unit=seconds
 
 sg.source.threads=1
@@ -28,4 +28,4 @@ sg.house_load.threads=1
 sg.plug_load.threads=1
 sg.outlier.sink.threads=3
 sg.prediction.sink.threads=3
-metrics.output=/home/gmap/metrics/batch/SG111111133/5/
+metrics.output=/home/gmap/metrics/batch/SG111111133/3/
