--- a/dspbench-flink/src/main/resources/config/spamfilter.properties
+++ b/dspbench-flink/src/main/resources/config/spamfilter.properties
@@ -16,13 +16,13 @@ sf.wordprob.wordmap.use_default=true
 sf.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.onlySink=true
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
-sf.training.parser.threads=1
-sf.analysis.parser.threads=1
+sf.training.parser.threads=4
+sf.analysis.parser.threads=4
 sf.tokenizer.threads=1
-sf.bayesrule.threads=2
-sf.sink.threads=1
-metrics.output=/home/gmap/metrics/batch/SF11121/5/
+sf.bayesrule.threads=4
+sf.sink.threads=2
+metrics.output=/home/gmap/metrics/batch/SF44142/3/
