--- a/dspbench-flink/src/main/resources/config/spikedetection.properties
+++ b/dspbench-flink/src/main/resources/config/spikedetection.properties
@@ -14,14 +14,13 @@ sd.sink.class=flink.sink.ConsoleSink
 sd.runtime_sec=60
 
 metrics.enabled=true
-metrics.reporter=csv
-metrics.interval.value=1
+metrics.onlySink=false
 metrics.interval.unit=seconds
 
 sd.source.threads=1
 
-sd.parser.threads=6
-sd.moving_average.threads=12
-sd.spike_detector.threads=12
-sd.sink.threads=8
-metrics.output=/home/gmap/metrics/stream/SD612128/5/
+sd.parser.threads=1
+sd.moving_average.threads=1
+sd.spike_detector.threads=1
+sd.sink.threads=1
+metrics.output=/home/gmap/metrics/stream/SD1111/1/
