--- a/dspbench-flink/src/main/resources/config/trafficmonitoring.properties
+++ b/dspbench-flink/src/main/resources/config/trafficmonitoring.properties
@@ -15,15 +15,15 @@ tm.map_matcher.lon.max=116.670021
 
 tm.sink.class=flink.sink.ConsoleSink
 
-metrics.interval.value=1
 metrics.reporter=csv
 metrics.enabled=true
+metrics.onlySink=true
 metrics.interval.unit=seconds
 
 tm.source.threads=1
 
-tm.parser.threads=6
-tm.map_matcher.threads=6
-tm.speed_calculator.threads=12
-tm.sink.threads=6
-metrics.output=/home/gmap/metrics/batch/TM66126/5/
+tm.parser.threads=8
+tm.map_matcher.threads=8
+tm.speed_calculator.threads=8
+tm.sink.threads=8
+metrics.output=/home/gmap/metrics/batch/TM8888/3/
