--- a/dspbench-flink/src/main/resources/config/trendingtopics.properties
+++ b/dspbench-flink/src/main/resources/config/trendingtopics.properties
@@ -15,8 +15,8 @@ tt.topk=5
 tt.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.onlySink=true
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
 tt.parser.threads=8
@@ -25,4 +25,4 @@ tt.counter.threads=4
 tt.iranker.threads=4
 tt.tranker.threads=1
 tt.sink.threads=4
-metrics.output=/home/gmap/metrics/stream/TT864414/5/
+metrics.output=/home/gmap/metrics/batch/TT864414/3/
