--- a/dspbench-flink/src/main/resources/config/voipstream.properties
+++ b/dspbench-flink/src/main/resources/config/voipstream.properties
@@ -51,8 +51,8 @@ vs.acd.weight=3.0
 vs.sink.class=flink.sink.ConsoleSink
 
 metrics.enabled=true
+metrics.onlySink=true
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
 vs.parser.threads=4
@@ -68,4 +68,4 @@ vs.url.threads=4
 vs.acd.threads=4
 vs.scorer.threads=2
 vs.sink.threads=2
-metrics.output=/home/gmap/metrics/batch/VS4888888844422/5/
+metrics.output=/home/gmap/metrics/batch/VS4888888844422/3/
