--- a/dspbench-flink/src/main/resources/config/wordcount.properties
+++ b/dspbench-flink/src/main/resources/config/wordcount.properties
@@ -9,14 +9,13 @@ wc.sink.class=flink.sink.ConsoleSink
 wc.runtime_sec=60
 
 metrics.enabled=true
-metrics.reporter=csv
-metrics.interval.value=1
+metrics.onlySink=false
 metrics.interval.unit=seconds
 
 wc.source.threads=1
 
-wc.parser.threads=5
-wc.splitter.threads=10
-wc.counter.threads=12
-wc.sink.threads=6
-metrics.output=/home/gmap/metrics/stream/WC510126/5/
+wc.parser.threads=1
+wc.splitter.threads=1
+wc.counter.threads=1
+wc.sink.threads=1
+metrics.output=/home/gmap/metrics/stream/WC1111/1/
