--- a/dspbench-flink/src/main/resources/config/clickanalytics.properties
+++ b/dspbench-flink/src/main/resources/config/clickanalytics.properties
@@ -12,8 +12,8 @@ storm.geoip.instance=geoip2
 storm.geoip2.db=/home/gmap/DSPBench/dspbench-flink/data/GeoLite2-City.mmdb
 
 metrics.enabled=true
+metrics.onlySink=true
 metrics.reporter=csv
-metrics.interval.value=1
 metrics.interval.unit=seconds
 
 ca.source.threads=1
@@ -25,4 +25,4 @@ ca.geography.threads=12
 ca.geo_stats.threads=12
 ca.visit.sink.threads=8
 ca.location.sink.threads=8
-metrics.output=/home/gmap/metrics/stream/CA6121212128/5/
+metrics.output=/home/gmap/metrics/batch/CA61212121288/3/
